Update example functionality

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@ scripts: |
   <aside class="col-lg-2" role="complementary">
     <nav class="example-sidebar js-sidebar">
       <ul class="nav">
-        <li class="active"><a href="#/line">Line</a></li>
+        <li><a href="#/line">Line</a></li>
         <li><a href="#/line-bar-values">Line-Bar Values</a></li>
       </ul>
     </nav>
