Simplify example templates

--- a/examples/index.html
+++ b/examples/index.html
@@ -35,127 +35,5 @@ scripts: |
   </section>
 </div>
 
-<script type="text/html" id="example-line-config">
-{% highlight js %}
-var example = d3.select('.js-chart').append('svg')
-  .chart('Multi', function(data) {
-    // Manipulate data as needed
-
-    // Create options for scales shared between charts and/or components
-    var scales = {
-      x: {data: data, key: 'x'},
-      y: {data: data, key: 'y'}
-    };
-
-    return {
-      charts: {
-        // Add a d3.chart('Line') chart
-        // with given data and scales
-        line: {
-          type: 'Line',
-          data: data,
-
-          // Set options for chart
-          xScale: scales.x,
-          yScale: scales.y,
-          interpolate: 'monotone'
-        }
-      },
-      components: {
-        'axis.x': {
-          type: 'Axis',
-          position: 'bottom',
-          scale: scales.x
-        },
-        'axis.y': {
-          type: 'Axis',
-          position: 'left',
-          scale: scales.y
-        },
-        title: {
-          type: 'Title',
-          position: 'top',
-          text: 'Line Chart'
-        }
-      }
-    };
-  })
-  .margins({top: 0, right: 15, bottom: 5, left: 5});
-{% endhighlight %}
-</script>
-<script type="text/html" id="example-line-data">
-{% highlight js %}
-[
-  {
-    key: 'a', values: [
-      {x: 0, y: 10}, {x: 10, y: 20}, {x: 20, y: 50}, {x: 30, y: 100}
-    ]
-  },
-  {
-    key: 'b', values: [
-      {x: 0, y: 50}, {x: 10, y: 45}, {x: 20, y: 15}, {x: 30, y: 10}
-    ]
-  }
-]
-{% endhighlight %}
-</script>
-
-<script type="text/html" id="example-line-bar-values-config">
-{% highlight js %}
-var example = d3.select('.js-chart').append('svg')
-  .chart('Multi', function(data) {
-    var input = data.input;
-    var results = data.results;
-    var scales = {
-      x: {type: 'ordinal', data: input, key: 'x'},
-      y: {data: input, key: 'y'},
-      y2: {data: results, key: 'y', domain: [0, 100]}
-    };
-
-    return d3.chart.xy({
-      charts: {
-        input: {
-          type: 'LineValues',
-          data: input,
-          xScale: scales.x,
-          yScale: scales.y
-        },
-        results: {
-          type: 'Bars',
-          data: results,
-          xScale: scales.x,
-          yScale: scales.y2
-        }
-      },
-      axes: {
-        x: {type: 'AxisValues', position: 'bottom', scale: scales.x},
-        y: {position: 'left', scale: scales.y, title: 'Input'},
-        y2: {position: 'right', scale: scales.y2, title: 'Results'}
-      },
-      title: 'Input vs. Output'
-    });
-  });
-{% endhighlight %}
-</script>
-<script type="text/html" id="example-line-bar-values-data">
-{% highlight js %}
-{
-  input: [
-    {
-      key: 'input',
-      values: [{x: 'a', y: 100}, {x: 'b', y: 200}, {x: 'c', y: 300}]
-    }
-  ],
-  results: [
-    {
-      key: 'run-1',
-      values: [{x: 'a', y: 10}, {x: 'b', y: 30}, {x: 'c', y: 20}]
-    },
-    {
-      key: 'run-2',
-      values: [{x: 'a', y: 15}, {x: 'b', y: 25}, {x: 'c', y: 20}]
-    }
-  ]
-};
-{% endhighlight %}
-</script>
+{% include example-line.html %}
+{% include example-line-bar-values.html %}
