--- a/example/index.html
+++ b/example/index.html
@@ -118,7 +118,7 @@
 
             return d3.chart.xy({
               charts: {
-                line: {type: 'Line', data: data.lines, xScale: scales.x, yScale: scales.y, labels: false},
+                line: {type: 'Line', data: data.lines, xScale: scales.x, yScale: scales.y, labels: {type: 'HoverLabels', hoverTolerance: 50}},
               },
               axes: {
                 x: {scale: scales.x, title: 'Year', tickFormat: d3.format('####')},
