--- a/example/debug.html
+++ b/example/debug.html
@@ -155,7 +155,7 @@
 
       return d3.chart.xy({
         charts: {
-          line: {type: 'Line', data: values, xScale: scales.x, yScale: scales.y, labels: true},
+          line: {type: 'Lines', data: values, xScale: scales.x, yScale: scales.y, labels: true},
         },
         axes: {
           x: {scale: scales.x, position: 'top', title: 'Howdy'},
@@ -196,7 +196,7 @@
 
           return d3.chart.xy({
             charts: {
-              line: {type: 'Line', data: values, xScale: scales.x, yScale: scales.y, labels: true},
+              line: {type: 'Lines', data: values, xScale: scales.x, yScale: scales.y, labels: true},
             },
             axes: {
               x: {scale: scales.x, position: 'top', title: 'Howdy'},
