--- a/example/index.html
+++ b/example/index.html
@@ -66,7 +66,7 @@
                   }
                 },
                 line: {
-                  type: 'Line',
+                  type: 'Lines',
                   data: data.input,
                   xScale: scales.x,
                   yScale: scales.y2,
@@ -118,7 +118,7 @@
 
             return d3.chart.xy({
               charts: {
-                line: {type: 'Line', data: data.lines, xScale: scales.x, yScale: scales.y, labels: {type: 'HoverLabels', hoverTolerance: 50}},
+                line: {type: 'Lines', data: data.lines, xScale: scales.x, yScale: scales.y, labels: {type: 'HoverLabels', hoverTolerance: 50}},
               },
               axes: {
                 x: {scale: scales.x, title: 'Year', tickFormat: d3.format('####')},
